substrate/frame/support/test/tests/benchmark_ui/bad_return_non_type_path.stderr
error: Only `Result<(), BenchmarkError>` or a blank return type is allowed on benchmark function definitions
  --> tests/benchmark_ui/bad_return_non_type_path.rs:27:16
   |
27 |     fn bench() -> (String, u32) {
   |                   ^^^^^^^^^^^^^
